title and saying to index.html

--- a/index.html
+++ b/index.html
@@ -11,17 +11,48 @@
 <link rel="stylesheet" href="css/styles.css" />
 <!-- endbuild -->
 
-<!-- add non css links here example: google fonts
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" /> -->
+<!-- add non css links here example: google fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
 
 
     <title>How are you, Really?</title>
 </head>
-<body>
+<body class="indexBody">
     
     <header>
 
     </header>
+
+<!-- <div class="container ml-3 d-flex">
+    <div class="row">
+        <div class="col-6 col-md d-flex">
+            <h1 id="landingPageHeader">How are</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 col-md d-flex">
+            <h1 id="landingPageHeader">you, Really?</h1>
+        </div>
+    </div>
+</div> -->
+<section>
+    <div class="row d-flex ml-3">
+        <div class="col-6 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">How are</div>
+        <!-- <div class="col">col</div> -->
+        <div class="w-100 d-flex"></div>
+        <div class="col-7 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">you, Really?</div>
+        <!-- <div class="col">col</div> -->
+    </div>
+    <div class="container d-flex justify-content-md-end mr-3" id="landingPagefooter">
+    <div class="row">
+        <div class="col">
+            <p class="">
+                A monthly care package for your mind, body and soul
+            </p>
+            </div>
+    </div>
+    </div>
+</section>
 
     <footer>
 
