added button to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <title>How are you, Really?</title>
 </head>
-<body class="indexBody">
+<body id="indexBody">
     
     <header>
 
@@ -36,21 +36,24 @@
     </div>
 </div> -->
 <section>
-    <div class="row d-flex ml-3">
-        <div class="col-6 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">How are</div>
-        <!-- <div class="col">col</div> -->
-        <div class="w-100 d-flex"></div>
-        <div class="col-7 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">you, Really?</div>
-        <!-- <div class="col">col</div> -->
-    </div>
-    <div class="container d-flex justify-content-md-end mr-3" id="landingPagefooter">
-    <div class="row">
-        <div class="col">
-            <p class="">
-                A monthly care package for your mind, body and soul
-            </p>
+    <div class="container-fluid">    
+        <div class="row d-flex ml-3">
+                <a class="btn btn-lg btn-dark w-25 active" id="landingButton" href="/homepage.html" role="button">&#x2713;</a>
+            <div class="col-6 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">How are</div>
+            <!-- <div class="col">col</div> -->
+            <div class="w-100 d-flex"></div>
+            <div class="col-7 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">you, Really?</div>
+            <!-- <div class="col">col</div> -->
+        </div>
+        <div class="container d-flex justify-content-md-end mr-3" id="landingPagefooter">
+            <div class="row">
+                <div class="col">
+                    <!-- <p class=""> -->
+                        A monthly care package for your mind, body and soul
+                    <!-- </p> -->
+                </div>
             </div>
-    </div>
+        </div>
     </div>
 </section>
 
