--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div class="container-fluid">    
         <div class="row d-flex ml-3">
                 <a class="btn btn-lg btn-dark w-25 active" id="landingButton" href="/homepage.html" role="button">&#x2713;</a>
-            <div class="col-6 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">How are</div>
+            <div class="col-6 col-md d-flex justify-content-md-start" id="landingPageHeader">How are</div>
             <!-- <div class="col">col</div> -->
             <div class="w-100 d-flex"></div>
-            <div class="col-7 col-md d-flex justify-content-center justify-content-md-start" id="landingPageHeader">you, Really?</div>
+            <div class="col-7 col-md d-flex justify-content-md-start" id="landingPageHeader">you, Really?</div>
             <!-- <div class="col">col</div> -->
         </div>
         <div class="container d-flex justify-content-md-end mr-3" id="landingPagefooter">
