--- a/boxdescription.html
+++ b/boxdescription.html
@@ -6,22 +6,110 @@
     
 <!-- build:css css/main.css -->
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+<script src="https://kit.fontawesome.com/d6878949a0.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
 <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 <link rel="stylesheet" href="css/styles.css" />
 <!-- endbuild -->
 
-<!-- add non css links here example: google fonts
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" /> -->
-
+<!-- add non css links here example: google fonts -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
 
     <title>How are you, Really?</title>
 </head>
-<body>
+
+<body id="boxDescBody">
     
     <header>
 
     </header>
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-sm sticky-top">
+            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="logo" height="45"></a>    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                    <button class="btn btn-lg dropdown-toggle navbar-btn nav-item dropdown" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-bars"></i> 
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="/howitworks.html">How It Works</a>
+                        <a class="dropdown-item" href="/boxdescription.html">What's in the Box?</a>
+                        <a class="dropdown-item" href="/faq.html">FAQ</a>
+                    </div>
+            <div class="collapse navbar-collapse" id="topNavbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="/loginmodal.html"><i class="fas fa-user fa-lg"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/shoppingcart.html"><i class="fas fa-shopping-bag fa-lg"></i></a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fas fa-home fa-lg"></i></a></li>
+                </ul>
+            </div>
+    </nav>
+
+
+    <div class="container-fluid">
+        <div class="row row-content d-flex align-items-center m-3">
+            <div class="col-md-6"></div>
+            <div class="col justify-content-end">
+                <div class="row row-content pt-3 pb-2">
+                    <div class="col d-flex justify-content-center">
+                        <h2>What to Expect in a Box</h2>
+                    </div>
+                </div>
+                <div class="row row-content">
+                    <div class="col">
+                        <div id="carouselBoxContents" class="carousel slide">
+                        <ul class="carousel-indicators">
+                            <li data-target="#carouselBoxContents" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselBoxContents" data-slide-to="1"></li>
+                            <li data-target="#carouselBoxContents" data-slide-to="2"></li>
+                        </ul>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/img/boxcontents.jpeg" class="d-block w-100" alt="box contents">
+                                    <div class="carousel-caption d-none d-block mb-4">
+                                        <h5>All boxes include</h5>
+                                        <p>2 activities, 6 self-love items, 2 shareables, <br> $100 worth of items in every box!</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/img/boxcontents2.jpg" class="d-block w-100" alt="box contents">
+                                    <div class="carousel-caption d-none d-block mb-4">
+                                        <h5>2 Activities</h5>
+                                        <p>Examples of activities from past boxes....Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/img/boxcontentsoil.jpg" class="d-block w-100" alt="box contents">
+                                    <div class="carousel-caption d-none d-block mb-4">
+                                        <h5>6 Self-Love Items</h5>
+                                        <p>Examples of past self-love item description....Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselBoxContents" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselBoxContents" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-content pb-3">
+                    <div class="col text-center">
+                        <button id="getStartedBtn" type = "button" class = "btn btn-large navbar-btn mr-auto">GET STARTED</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
 
