minor carousel adjustment boxdescription.html

--- a/boxdescription.html
+++ b/boxdescription.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row row-content">
                     <div class="col">
-                        <div id="carouselBoxContents" class="carousel slide">
+                        <div id="carouselBoxContents" class="carousel slide" data-pause="true">
                         <ul class="carousel-indicators">
                             <li data-target="#carouselBoxContents" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselBoxContents" data-slide-to="1"></li>
@@ -86,7 +86,7 @@
                                     <img src="/img/boxcontentsoil.jpg" class="d-block w-100" alt="box contents">
                                     <div class="carousel-caption d-none d-block mb-4">
                                         <h5>6 Self-Love Items</h5>
-                                        <p>Examples of past self-love item description....Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                        <p>Examples of past self-love item description....Praesent commodo cursus magna.</p>
                                     </div>
                                 </div>
                             </div>
