--- a/loginmodal.html
+++ b/loginmodal.html
@@ -44,7 +44,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="/loginmodal.html" data-toggle="modal" data-target="#loginModal"><i class="fas fa-user fa-lg"></i></a></li>
                     <li class="nav-item"><a class="nav-link" href="/shoppingcart.html"><i class="fas fa-shopping-bag fa-lg"></i></a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fas fa-home fa-lg"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/homepage.html"><i class="fas fa-home fa-lg"></i></a></li>
                 </ul>
             </div>
     </nav>
@@ -84,6 +84,7 @@
             </div>
         </div>
     </div>
+<!-- modal pop-up for login end -->
     
     <footer>
 
