update navbar and modal for all htmls

--- a/loginmodal.html
+++ b/loginmodal.html
@@ -24,11 +24,10 @@
     <header>
 
     </header>
-
     <!-- navbar -->
     <nav class="navbar navbar-expand-sm sticky-top">
-        <button id="getStartedBtn" type = "button" class = "btn btn-large navbar-btn mr-auto">GET STARTED</button>
-            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="logo" height="45"></a>    
+        <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a>
+            <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -85,6 +84,7 @@
         </div>
     </div>
 <!-- modal pop-up for login end -->
+
     
     <footer>
 
