--- a/boxdescription.html
+++ b/boxdescription.html
@@ -26,9 +26,11 @@
 
     </header>
 
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-sm sticky-top">
-            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="logo" height="45"></a>    
+        <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a>
+            <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,6 +50,43 @@
                 </ul>
             </div>
     </nav>
+
+    <!-- modal pop up for login -->
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <!-- modal header with X-botton to close -->
+                <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times; </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="form-title text-center">
+                        <h4>Sign-In</h4>
+                        </div>
+                        <form>
+                            <div class="form-group">
+                                <label for="email1" class="form-label">Email:</label>
+                                <input type="email" class="form-control" id="email1"placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label for="password1" class="form-label">Password:</label>
+                                <input type="password" class="form-control" id="password1" placeholder="">
+                            </div>
+                            <button type="button" class="btn btn-block" id="signInBtn">Sign In</button>
+                            <hr>
+                            <div class="form-title text-center">
+                                <h4 class="p-2">Sign-Up</h4>
+                                <p>Welcome! It's quick and easy to set up an account.</p>
+                            </div>
+                            <button type="button" class="btn btn-block"  id="createAccBtn">Create an Account</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- modal pop-up for login end -->
 
 
     <div class="container-fluid">
