--- a/faq.html
+++ b/faq.html
@@ -24,8 +24,8 @@
     
     <!-- navbar -->
     <nav class="navbar navbar-expand-sm sticky-top">
-        <button id="getStartedBtn" type = "button" class = "btn btn-large navbar-btn mr-auto">GET STARTED</button>
-            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="logo" height="45"></a>    
+        <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a>
+            <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -82,6 +82,7 @@
         </div>
     </div>
 <!-- modal pop-up for login end -->
+
 
     <header>
 
