--- a/store.html
+++ b/store.html
@@ -23,6 +23,69 @@
 
     </header>
 
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-sm sticky-top">
+        <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a>
+            <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                    <button class="btn btn-lg dropdown-toggle navbar-btn nav-item dropdown" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-bars"></i> 
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="/howitworks.html">How It Works</a>
+                        <a class="dropdown-item" href="/boxdescription.html">What's in the Box?</a>
+                        <a class="dropdown-item" href="/faq.html">FAQ</a>
+                    </div>
+            <div class="collapse navbar-collapse" id="topNavbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="/loginmodal.html" data-toggle="modal" data-target="#loginModal"><i class="fas fa-user fa-lg"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/shoppingcart.html"><i class="fas fa-shopping-bag fa-lg"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/homepage.html"><i class="fas fa-home fa-lg"></i></a></li>
+                </ul>
+            </div>
+    </nav>
+
+    <!-- modal pop up for login -->
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <!-- modal header with X-botton to close -->
+                <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times; </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="form-title text-center">
+                        <h4>Sign-In</h4>
+                        </div>
+                        <form>
+                            <div class="form-group">
+                                <label for="email1" class="form-label">Email:</label>
+                                <input type="email" class="form-control" id="email1"placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label for="password1" class="form-label">Password:</label>
+                                <input type="password" class="form-control" id="password1" placeholder="">
+                            </div>
+                            <button type="button" class="btn btn-block" id="signInBtn">Sign In</button>
+                            <hr>
+                            <div class="form-title text-center">
+                                <h4 class="p-2">Sign-Up</h4>
+                                <p>Welcome! It's quick and easy to set up an account.</p>
+                            </div>
+                            <button type="button" class="btn btn-block"  id="createAccBtn">Create an Account</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- modal pop-up for login end -->
+
+
     <footer>
 
     </footer>
