--- a/howitworks.html
+++ b/howitworks.html
@@ -6,13 +6,16 @@
     
 <!-- build:css css/main.css -->
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+<script src="https://kit.fontawesome.com/d6878949a0.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
 <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 <link rel="stylesheet" href="css/styles.css" />
 <!-- endbuild -->
 
-<!-- add non css links here example: google fonts
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" /> -->
+<!-- add non css links here example: google fonts -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
 
 
     <title>How are you, Really?</title>
