store.html setup basic layout

--- a/boxdescription.html
+++ b/boxdescription.html
@@ -115,7 +115,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="/img/boxcontents2.jpg" class="d-block w-100" alt="box contents">
+                                    <img src="/img/boxbookcontent.jpg" class="d-block w-100" alt="box contents">
                                     <div class="carousel-caption d-none d-block mb-4">
                                         <h5>2 Activities</h5>
                                         <p>Examples of activities from past boxes....Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
