--- a/store.html
+++ b/store.html
@@ -20,16 +20,15 @@
 
     <title>How are you, Really?</title>
 </head>
-<body>
+<body id="storeBody">
     
     <header>
 
     </header>
 
-
     <!-- navbar -->
     <nav class="navbar navbar-expand-sm sticky-top">
-        <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a>
+        <!-- <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a> -->
             <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -88,6 +87,43 @@
     </div>
 <!-- modal pop-up for login end -->
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 ">
+            <div class="card text-center border-muted bg-white">
+                <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 1">
+                <div class="card-body">
+                    <h6 class="card-title text-muted">Monthly base plan</h6>
+                    <h5 class="card-title">Monthly</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn myDarkBtn">Select</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card text-center bg-white">
+                <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 2">
+                <div class="card-body">
+                    <h6 class="card-title text-muted">&hearts;Most Popular!</h6>
+                  <h5 class="card-title">3 Month Prepay</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn myDarkBtn">Select</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card text-center bg-white">
+                <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 3">
+                <div class="card-body">
+                    <h6 class="card-title text-muted">&hearts;Best Value!</h6>
+                  <h5 class="card-title">6 Month Prepay</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn myDarkBtn">Select</a>
+                </div>
+              </div>
+        </div>
+    </div>
+</div>
 
     <footer>
 
