add <ul> to store product descriptions

--- a/store.html
+++ b/store.html
@@ -95,8 +95,16 @@
                 <div class="card-body">
                     <h6 class="card-title text-muted">Monthly base plan</h6>
                     <h5 class="card-title">Monthly</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn myDarkBtn">Select</a>
+                    <p class="card-text">
+                        $40 per box
+                        <ul class="text-left">
+                            <li>6-8 Full Size Products</li>
+                            <li>Over $100+ worth of goodies in each box</li>
+                            <li>Ships worldwide + Free Shipping in the USA!</li>
+                        </ul>
+                        $40
+                    </p>
+                        <a href="#" class="btn myDarkBtn">Select</a>
                 </div>
               </div>
         </div>
@@ -105,9 +113,17 @@
                 <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 2">
                 <div class="card-body">
                     <h6 class="card-title text-muted">&hearts;Most Popular!</h6>
-                  <h5 class="card-title">3 Month Prepay</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn myDarkBtn">Select</a>
+                    <h5 class="card-title">3 Month Prepay</h5>
+                    <p class="card-text">
+                        $38 per box!
+                        <ul class="text-left">
+                            <li>6-8 Full Size Products</li>
+                            <li>Over $100+ worth of goodies in each box</li>
+                            <li>Ships worldwide + Free Shipping in the USA!</li>
+                        </ul>
+                        $115
+                    </p>
+                    <a href="#" class="btn myDarkBtn">Select</a>
                 </div>
               </div>
         </div>
@@ -116,8 +132,17 @@
                 <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 3">
                 <div class="card-body">
                     <h6 class="card-title text-muted">&hearts;Best Value!</h6>
-                  <h5 class="card-title">6 Month Prepay</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">6 Month Prepay</h5>
+                  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                    <p class="card-text">
+                        $36 per box!
+                        <ul class="text-left">
+                            <li>6-8 Full Size Products</li>
+                            <li>Over $100+ worth of goodies in each box</li>
+                            <li>Ships worldwide + Free Shipping in the USA!</li>
+                        </ul>
+                        $216
+                    </p>
                   <a href="#" class="btn myDarkBtn">Select</a>
                 </div>
               </div>
