add padding to store items

--- a/store.html
+++ b/store.html
@@ -87,7 +87,7 @@
     </div>
 <!-- modal pop-up for login end -->
 
-<div class="container">
+<div class="container pt-3">
     <div class="row">
         <div class="col-md-4 ">
             <div class="card text-center border-muted bg-white">
