--- a/store.html
+++ b/store.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-sm sticky-top">
+    <nav class="navbar navbar-expand-lg">
         <!-- <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn mr-auto" role="button">GET STARTED</a> -->
             <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
