start footer layout

--- a/footer.html
+++ b/footer.html
@@ -22,13 +22,50 @@
 </head>
 <body>
     
-    <header>
+    <!-- <footer class="footer"> -->
+        <div id="imageDiv" class="container">
+            <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
+        </div>
+        <div class="container" id="hastagDiv">
+            <img id="hastagLogo" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
+        </div>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <div class="card text-center border-0 mx-auto" style="width: 400px;">
+                        <div class="card-body">
+                            <div class="card-title">Get our emails</div>
+                            <form action="">
+                                <div class="input-group">
+                                    <input type="text" class="form-control bg-light mr-1 w-20" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                    <div class="input-group-append">
+                                        <button class="btn myDarkBtn" type="button">Submit</button>
+                                    </div>
+                                </div>
+                                <small id="emailJoin" class="form-text text-muted font-italic mt-2">Join our newsletter for the latest offers, sneak peeks, giveaways & more!</small>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-4">
+                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
+            </div>
+            <div class="row justify-content-center mt-5">
+                <div class="col-3">
+                    <a href="#" class="fab fa-facebook-square footerSocial"></a>
+                    <a href="#" class="fa fa-envelope footerSocial"></a>
+                    <a href="#" class="fa fa-twitter footerSocial"></a>
+                    <a href="#" class="fab fa-instagram footerSocial"></a>
+                </div>
+            </div>
+        </div>
+    <!-- </footer> -->
 
-    </header>
-
-    <footer>
-
-    </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
