footer with images responsive

--- a/footer.html
+++ b/footer.html
@@ -23,21 +23,22 @@
 <body>
     
     <!-- <footer class="footer"> -->
-        <div id="imageDiv" class="container">
+        <!-- <div id="footerImageDiv" class="container">
             <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
-        </div>
-        <div class="container" id="hastagDiv">
             <img id="hastagLogo" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
-        </div>
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col">
+        </div> -->
+        <div class="container mt-5" id="footerCard">
+            <!-- <img id="hashtagLogo" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag"> -->
+            <div class="row justify-content-center">
+                <div class="col-auto">
                     <div class="card text-center border-0 mx-auto" style="width: 400px;">
                         <div class="card-body">
                             <div class="card-title">Get our emails</div>
                             <form action="">
+                                <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
+                                <img id="hashtagLogo" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
                                 <div class="input-group">
-                                    <input type="text" class="form-control bg-light mr-1 w-20" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                    <input type="text" class="form-control bg-light mr-1 w-20 footerRelative " placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
                                         <button class="btn myDarkBtn" type="button">Submit</button>
                                     </div>
@@ -48,15 +49,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center mt-4">
-                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
-                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
-                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
-                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
-                <div class="col-2"><a href="#" class="footerLinks">Link</a></div>
+            <div class="row justify-content-center mt-3">
+                <div class="col-auto"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-auto"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-auto"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-auto"><a href="#" class="footerLinks">Link</a></div>
+                <div class="col-auto"><a href="#" class="footerLinks">Link</a></div>
             </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col-3">
+            <div class="row justify-content-center mt-4">
+                <div class="col-auto">
                     <a href="#" class="fab fa-facebook-square footerSocial"></a>
                     <a href="#" class="fa fa-envelope footerSocial"></a>
                     <a href="#" class="fa fa-twitter footerSocial"></a>
