--- a/howitworks.html
+++ b/howitworks.html
@@ -134,9 +134,45 @@
     </div>
 </div>
 
-    <footer>
-
-    </footer>
+<footer class="footer bg-white">
+    <div class="container mt-5" id="footerCard">
+        <div class="row justify-content-center">
+            <div class="col-auto mt-5">
+                <div class="card text-center border-0 mx-auto" style="width: 400px;">
+                    <div class="card-body">
+                        <div class="card-title headerText">Get our emails</div>
+                        <form action="">
+                            <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
+                            <img id="hashtagLogo" class="" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
+                            <div class="input-group">
+                                <input type="text" class="form-control bg-light mr-1 w-20 footerRelative" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <div class="input-group-append">
+                                    <button class="btn myDarkBtn" type="button">Submit</button>
+                                </div>
+                            </div>
+                            <small id="emailJoin" class="form-text text-muted font-italic mt-2">Join our newsletter for the latest offers, sneak peeks, giveaways & more!</small>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-3">
+            <div class="col-auto"><a href="/homepage.html" class="footerLinks">Home</a></div>
+            <div class="col-auto"><a href="/store.html" class="footerLinks">Get Started</a></div>
+            <div class="col-auto"><a href="/faq.html" class="footerLinks">FAQ</a></div>
+            <div class="col-auto"><a href="/howitworks.html" class="footerLinks">How It Works</a></div>
+            <!-- <div class="col-auto"><a href="/boxdescription.html" class="footerLinks">What's in the Box</a></div> -->
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-auto" id="footerIcons">
+                <a href="https://www.facebook.com/" class="fab fa-facebook-square footerSocial"></a>
+                <a href="https://mail.google.com/" class="fa fa-envelope footerSocial"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter footerSocial"></a>
+                <a href="https://www.instagram.com/" class="fab fa-instagram footerSocial"></a>
+            </div>
+        </div>
+    </div>
+</footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
