--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+
 <!-- build:css css/main.css -->
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 <script src="https://kit.fontawesome.com/d6878949a0.js" crossorigin="anonymous"></script>
@@ -17,7 +18,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" />
 
-
     <title>How are you, Really?</title>
 </head>
 <body  id="homepageBody">
@@ -26,10 +26,10 @@
 
     </header> -->
 
-    <!-- navbar -->
+    <!-- navbar
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <!-- <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn" role="button">GET STARTED</a>
-            <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>     -->
+        <a id="getStartedBtn" href="/store.html" class="btn btn-large navbar-btn" role="button">GET STARTED</a>
+            <a class="navbar-brand" href="/homepage.html"><img src="/img/logo.png" alt="logo" height="45"></a>    
             <div id="bigNav">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -55,8 +55,10 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
+
+    
     <!-- modal pop up for login -->
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
@@ -94,7 +96,25 @@
     </div>
 <!-- modal pop-up for login end -->
 
-<div class="container-fluid">
+<div class="container-fluid" id="homePgContainer">
+    <div class="row align-items-center h-100">
+        <div class="col-12 col-md-6 text-center">
+            <div class="card ml-4">
+                <div class="card-body">
+                    <h2 class="card-title">How are you,</br>Really?</h2>
+                    <p class="text-justify text-center"  id="homepageText">
+                        <img class="w-75 pb-3" src="/img/boxcontents.jpeg" alt=""><br>
+                        In here goes the description product. All about how amazing it is to check-in with yourselff monthly for a mental health check-in with yourself, how the Box will help you thorugh your journey and do all the great things lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a id="subscribeBtn" href="/store.html" class="btn btn-large" role="button">SUBSCRIBE OR SEND HOPE</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 text-center p-2 ">
+            <img id="womanHome" src="/img/Self-Love-transparent.png" alt=""></div>
+    </div>
+</div>
+
+<!-- <div class="container-fluid">
     <div class="row row-content d-flex flex-wrap align-items-center">
         <div class="col-12 col-md-6 text-center p-5">
                     <h3 id="homepageHeader">How are you,</br>Really?</h3>
@@ -107,11 +127,11 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
-    <footer>
+    <!-- <footer>
 
-    </footer>
+    </footer> -->
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
