use jQuery for login modal

--- a/boxdescription.html
+++ b/boxdescription.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="row row-content pb-3">
                     <div class="col text-center">
-                        <button id="getStartedBtn" type = "button" class = "btn btn-large navbar-btn mr-auto">GET STARTED</button>
+                        <a id="subscribeBtn" href="/store.html" class="btn btn-large" role="button">SUBSCRIBE OR SEND HOPE</a>
                     </div>
                 </div>
             </div>
